--- a/AspNetCoreXprojApp1.csproj
+++ b/AspNetCoreXprojApp1.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugType></DebugType>
+    <DebugType>Full</DebugType>
+    <!--<DebugType>None</DebugType>-->
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="1.1.0" />
@@ -32,10 +33,8 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Views\Shared\Components\Simple\default.cshtml" />
-    <None Include="Views\Home\Index3.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
+    <Folder Include="Views\" />
     <Folder Include="Models\" />
+    <Folder Include="ViewComponents\" />
   </ItemGroup>
 </Project>
