--- a/AspNetCoreXprojApp1.csproj
+++ b/AspNetCoreXprojApp1.csproj
@@ -8,13 +8,8 @@
     <DebugType>portable</DebugType>
     <!--<DebugType>None</DebugType>-->
   </PropertyGroup>
+  
   <ItemGroup>
-    <!--
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="1.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
-      <Version>1.1.0</Version>
-    </PackageReference>
-    -->
     <PackageReference Include="Microsoft.AspNetCore">
       <Version>1.0.3</Version>
     </PackageReference>
@@ -34,6 +29,17 @@
       <Version>1.0.2</Version>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="1.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+      <Version>1.1.0</Version>
+    </PackageReference>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet">
+      <Version>1.1.0-preview4-final</Version>
+     </DotNetCliToolReference>
+  </ItemGroup>
+
   <ItemGroup>
     <Folder Include="Views\" />
     <Folder Include="Models\" />
