--- a/AspNetCoreXprojApp1.csproj
+++ b/AspNetCoreXprojApp1.csproj
@@ -1,17 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-
+﻿<Project Sdk="Microsoft.NET.Sdk.Web" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.0</TargetFramework>
   </PropertyGroup>
-
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>portable</DebugType>
     <!--<DebugType>None</DebugType>-->
   </PropertyGroup>
-  
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore">
-      <Version>1.0.3</Version>
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc">
       <Version>1.0.2</Version>
@@ -29,15 +26,14 @@
       <Version>1.0.2</Version>
     </PackageReference>
   </ItemGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="1.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
-      <Version>1.1.0</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.0.0-msbuild1-final" />
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet">
-      <Version>1.1.0-preview4-final</Version>
-     </DotNetCliToolReference>
+      <Version>1.0.0-msbuild1-final</Version>
+    </DotNetCliToolReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -45,4 +41,5 @@
     <Folder Include="Models\" />
     <Folder Include="ViewComponents\" />
   </ItemGroup>
+  
 </Project>
